Revert "Committing  latest version"
This reverts commit 34c2505312cca03ef16ae5c3d16500e7b6d9ecfc.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "github:hydrabolt/discord.js"
+    "discord.js": "^11.3.0"
   }
 }
