--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
 	"prefix": "!",
-	"token": "Mzg1MjIxMzUzMzE5NTYzMjY0.DP-NWA.C3xNqyizsDnXsK3NvuNS8e8cI7Q",
-	"categoryId": "374721968978788376"
+	"token": ""
 }
