Moved config to dot-env

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jesfery",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.1.1"
+    "discord.js": "^12.1.1",
+    "dotenv": "^8.0.0"
   }
 }
